// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

<div
  className="c0"
>
  
  <input
    error=""
    id=""
    label=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
.c1 {
  display: block;
  margin-bottom: 5px;
  font-size: 16px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 1.5;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor="range-with-label"
  >
     
    Text label
     
  </label>
  <input
    error=""
    id="range-with-label"
    label="Text label"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
.c1 {
  color: #f4365b;
  font-size: 12px;
  margin: 5px 0;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

<div
  className="c0"
>
  
  <input
    error="Error message"
    id=""
    label=""
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="range"
    value={0}
  />
  <div
    className="c1"
  >
    Error message
  </div>
</div>
`;
